알람 제어 시스템 개선 및 앱 재실행 시 백그라운드 서비스 복원

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,4 +59,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+}
