알람 제어 시스템 개선 및 앱 재실행 시 백그라운드 서비스 복원

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   # State management
   provider: ^6.1.1
 
+  # Permission handling
+  permission_handler: ^11.0.1
+
   # Icons
   cupertino_icons: ^1.0.6
 
